--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/s3-request-presigner": "^3.502.0",
     "aws-sdk": "^2.1544.0",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.9.1",
